    - Added a toggle to the Clip SOP to invert the clipping mask.
    - Added a slider to the Scatter SOP to specify how far each point
      may be displaced from the center of its host voxel or tile.
    - The LOD SOP now supports all standard grid types, including
      boolean grids.
    - Made various small changes for Houdini 16 compatibility.
      [Contributed by SideFX]


Version 3.2.0 - August 10, 2016

    Highlights:
    - New features: tool to produce and store a sequences of progressively
      lower resolution grids (mipmaps), an acceleration structure for fast
      range and nearest-neighbor searches on particles, arbitrary volume
      and level set specific segmentation tools, a new binary mask grid
      type and an efficient point to level set conversion scheme.
    - Optimizations: Faster volume to mesh conversion and threaded grid
      destruction, morphological dilation, csg operations and fracture tool.
    - New Houdini nodes: Segment, LOD and Topology To Level Set.

    New features:
    - Added tools::MultiResGrid a tool to produce and store a sequences
      of progressively lower resolution grids (mipmaps).
    - Added tools::ParticleAtlas an acceleration structure for fast range
      and nearest-neighbor searches on particles, points with radius.
    - Added tools::segmentActiveVoxels(), which operates on grids of arbitrary
      type and separates connected components of a grid's active voxels into
      distinct grids or trees.
    - Added tools::segmentSDF(), which separates disjoint signed-distance-field
      surfaces into distinct grids or trees.
    - Added tools::extractActiveVoxelSegmentMasks(), which constructs a mask
      for each connected component of a grid's active voxels.
    - Added threaded level-set CSG tools csgUnionCopy(), csgIntersectionCopy()
      and csgDifferenceCopy(), which, unlike the existing CSG tools, produce
      new grids rather than modifying their input grids.  These new tools are